@@ -13,7 +13,6 @@ import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
 import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 import lombok.AccessLevel;
@@ -21,8 +20,7 @@ import lombok.NoArgsConstructor;
 import org.eclipse.hawkbit.mgmt.json.model.softwaremoduletype.MgmtSoftwareModuleType;
 import org.eclipse.hawkbit.mgmt.json.model.softwaremoduletype.MgmtSoftwareModuleTypeRequestBodyPost;
 import org.eclipse.hawkbit.mgmt.rest.api.MgmtSoftwareModuleTypeRestApi;
-import org.eclipse.hawkbit.repository.EntityFactory;
-import org.eclipse.hawkbit.repository.builder.SoftwareModuleTypeCreate;
+import org.eclipse.hawkbit.repository.SoftwareModuleTypeManagement.Create;
 import org.eclipse.hawkbit.repository.model.SoftwareModuleType;
 import org.eclipse.hawkbit.rest.json.model.ResponseList;
 
@@ -32,40 +30,37 @@ import org.eclipse.hawkbit.rest.json.model.ResponseList;
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public final class MgmtSoftwareModuleTypeMapper {
 
-    public static List<SoftwareModuleTypeCreate> smFromRequest(final EntityFactory entityFactory,
-            final Collection<MgmtSoftwareModuleTypeRequestBodyPost> smTypesRest) {
-        if (smTypesRest == null) {
-            return Collections.emptyList();
+    public static List<Create> smFromRequest(final Collection<MgmtSoftwareModuleTypeRequestBodyPost> request) {
+        if (request == null) {
+            return List.of();
         }
-
-        return smTypesRest.stream().map(smRest -> fromRequest(entityFactory, smRest)).toList();
+        return request.stream().map(MgmtSoftwareModuleTypeMapper::fromRequest).toList();
     }
 
-    public static List<MgmtSoftwareModuleType> toTypesResponse(final Collection<SoftwareModuleType> types) {
+    public static List<MgmtSoftwareModuleType> toTypesResponse(final Collection<? extends SoftwareModuleType> types) {
         if (types == null) {
-            return Collections.emptyList();
+            return List.of();
         }
-
         return new ResponseList<>(types.stream().map(MgmtSoftwareModuleTypeMapper::toResponse).toList());
     }
 
     public static MgmtSoftwareModuleType toResponse(final SoftwareModuleType type) {
         final MgmtSoftwareModuleType result = new MgmtSoftwareModuleType();
-
         MgmtRestModelMapper.mapTypeToType(result, type);
-        result.setMaxAssignments(type.getMaxAssignments());
-        result.setId(type.getId());
-
-        result.add(linkTo(methodOn(MgmtSoftwareModuleTypeRestApi.class).getSoftwareModuleType(result.getId()))
-                .withSelfRel().expand());
-
+        result
+                .setId(type.getId())
+                .setMinArtifacts(type.getMinArtifacts())
+                .setMaxAssignments(type.getMaxAssignments());
+        result.add(linkTo(methodOn(MgmtSoftwareModuleTypeRestApi.class).getSoftwareModuleType(result.getId())).withSelfRel().expand());
         return result;
     }
 
-    private static SoftwareModuleTypeCreate fromRequest(final EntityFactory entityFactory,
-            final MgmtSoftwareModuleTypeRequestBodyPost smsRest) {
-        return entityFactory.softwareModuleType().create().key(smsRest.getKey()).name(smsRest.getName())
-                .description(smsRest.getDescription()).colour(smsRest.getColour())
-                .maxAssignments(smsRest.getMaxAssignments());
+    private static Create fromRequest(final MgmtSoftwareModuleTypeRequestBodyPost request) {
+        return Create.builder()
+                .key(request.getKey()).name(request.getName())
+                .description(request.getDescription()).colour(request.getColour())
+                .minArtifacts(request.getMinArtifacts())
+                .maxAssignments(request.getMaxAssignments())
+                .build();
     }
 }
