@@ -9,21 +9,21 @@
  */
 package org.eclipse.hawkbit.repository.jpa.management;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 import java.util.function.BooleanSupplier;
+import java.util.function.Consumer;
 import java.util.function.Function;
 
 import org.apache.commons.collections4.ListUtils;
+import org.eclipse.hawkbit.context.AccessContext;
 import org.eclipse.hawkbit.repository.QuotaManagement;
 import org.eclipse.hawkbit.repository.RepositoryConstants;
 import org.eclipse.hawkbit.repository.RepositoryProperties;
 import org.eclipse.hawkbit.repository.exception.InsufficientPermissionException;
+import org.eclipse.hawkbit.repository.jpa.JpaManagementHelper;
 import org.eclipse.hawkbit.repository.jpa.acm.AccessController;
 import org.eclipse.hawkbit.repository.jpa.configuration.Constants;
-import org.eclipse.hawkbit.repository.jpa.executor.AfterTransactionCommitExecutor;
+import org.eclipse.hawkbit.repository.jpa.management.JpaDeploymentManagement.MaxAssignmentsExceededInfo;
 import org.eclipse.hawkbit.repository.jpa.model.JpaAction;
 import org.eclipse.hawkbit.repository.jpa.model.JpaActionStatus;
 import org.eclipse.hawkbit.repository.jpa.model.JpaDistributionSet;
@@ -31,7 +31,6 @@ import org.eclipse.hawkbit.repository.jpa.model.JpaTarget;
 import org.eclipse.hawkbit.repository.jpa.repository.ActionRepository;
 import org.eclipse.hawkbit.repository.jpa.repository.ActionStatusRepository;
 import org.eclipse.hawkbit.repository.jpa.repository.TargetRepository;
-import org.eclipse.hawkbit.repository.jpa.specifications.SpecificationsBuilder;
 import org.eclipse.hawkbit.repository.jpa.specifications.TargetSpecifications;
 import org.eclipse.hawkbit.repository.model.Action.Status;
 import org.eclipse.hawkbit.repository.model.DistributionSet;
@@ -40,25 +39,24 @@ import org.eclipse.hawkbit.repository.model.TargetUpdateStatus;
 import org.eclipse.hawkbit.repository.model.TargetWithActionType;
 
 /**
- * AbstractDsAssignmentStrategy for offline assignments, i.e. not managed by
- * hawkBit.
+ * AbstractDsAssignmentStrategy for offline assignments, i.e. not managed by hawkBit.
  */
-public class OfflineDsAssignmentStrategy extends AbstractDsAssignmentStrategy {
+class OfflineDsAssignmentStrategy extends AbstractDsAssignmentStrategy {
 
     OfflineDsAssignmentStrategy(
             final TargetRepository targetRepository,
-            final AfterTransactionCommitExecutor afterCommit,
             final ActionRepository actionRepository, final ActionStatusRepository actionStatusRepository,
-            final QuotaManagement quotaManagement, final BooleanSupplier multiAssignmentsConfig,
-            final BooleanSupplier confirmationFlowConfig, final RepositoryProperties repositoryProperties) {
-        super(targetRepository, afterCommit, actionRepository, actionStatusRepository,
-                quotaManagement, multiAssignmentsConfig, confirmationFlowConfig, repositoryProperties);
+            final QuotaManagement quotaManagement,
+            final BooleanSupplier confirmationFlowConfig, final RepositoryProperties repositoryProperties,
+            final Consumer<MaxAssignmentsExceededInfo> maxAssignmentExceededHandler) {
+        super(targetRepository, actionRepository, actionStatusRepository,
+                quotaManagement, confirmationFlowConfig, repositoryProperties, maxAssignmentExceededHandler);
     }
 
     @Override
-    public JpaAction createTargetAction(final String initiatedBy, final TargetWithActionType targetWithActionType,
-            final List<JpaTarget> targets, final JpaDistributionSet set) {
-        final JpaAction result = super.createTargetAction(initiatedBy, targetWithActionType, targets, set);
+    public JpaAction createTargetAction(
+            final TargetWithActionType targetWithActionType, final List<JpaTarget> targets, final JpaDistributionSet set) {
+        final JpaAction result = super.createTargetAction(targetWithActionType, targets, set);
         if (result != null) {
             result.setStatus(Status.FINISHED);
             result.setActive(Boolean.FALSE);
@@ -76,16 +74,12 @@ public class OfflineDsAssignmentStrategy extends AbstractDsAssignmentStrategy {
 
     @Override
     public List<JpaTarget> findTargetsForAssignment(final List<String> controllerIDs, final long setId) {
-        final Function<List<String>, List<JpaTarget>> mapper;
-        if (isMultiAssignmentsEnabled()) {
-            mapper = ids -> targetRepository.findAll(TargetSpecifications.hasControllerIdIn(ids));
-        } else {
-            mapper = ids -> targetRepository.findAll(SpecificationsBuilder.combineWithAnd(
-                    Arrays.asList(TargetSpecifications.hasControllerIdAndAssignedDistributionSetIdNot(ids, setId),
-                            TargetSpecifications.notEqualToTargetUpdateStatus(TargetUpdateStatus.PENDING))));
-        }
-        return ListUtils.partition(controllerIDs, Constants.MAX_ENTRIES_IN_STATEMENT).stream().map(mapper)
-                .flatMap(List::stream).toList();
+        final Function<List<String>, List<JpaTarget>> mapper =
+                ids -> targetRepository.findAll(JpaManagementHelper.combineWithAnd(List.of(
+                        TargetSpecifications.hasControllerIdAndAssignedDistributionSetIdNot(ids, setId),
+                        TargetSpecifications.notEqualToTargetUpdateStatus(TargetUpdateStatus.PENDING))));
+
+        return ListUtils.partition(controllerIDs, Constants.MAX_ENTRIES_IN_STATEMENT).stream().map(mapper).flatMap(List::stream).toList();
     }
 
     @Override
@@ -97,8 +91,7 @@ public class OfflineDsAssignmentStrategy extends AbstractDsAssignmentStrategy {
     }
 
     @Override
-    public void setAssignedDistributionSetAndTargetStatus(
-            final JpaDistributionSet set, final List<List<Long>> targetIds, final String currentUser) {
+    public void setAssignedDistributionSetAndTargetStatus(final JpaDistributionSet set, final List<List<Long>> targetIds) {
         final long now = System.currentTimeMillis();
         targetIds.forEach(targetIdsChunk -> {
             if (targetRepository.count(AccessController.Operation.UPDATE,
@@ -106,7 +99,7 @@ public class OfflineDsAssignmentStrategy extends AbstractDsAssignmentStrategy {
                 throw new InsufficientPermissionException("No update access to all targets!");
             }
             targetRepository.setAssignedAndInstalledDistributionSetAndUpdateStatus(
-                    TargetUpdateStatus.IN_SYNC, set, now, currentUser, targetIdsChunk);
+                    TargetUpdateStatus.IN_SYNC, set, now, AccessContext.actor(), targetIdsChunk);
             // TODO AC - current problem with this approach is that the caller detach the targets and seems doesn't save them
 //            targetRepository.saveAll(
 //                    targetRepository
@@ -126,8 +119,8 @@ public class OfflineDsAssignmentStrategy extends AbstractDsAssignmentStrategy {
     }
 
     @Override
-    public Set<Long> cancelActiveActions(final List<List<Long>> targetIds) {
-        return Collections.emptySet();
+    public void cancelActiveActions(final List<List<Long>> targetIds) {
+        // Not supported by offline case
     }
 
     @Override
@@ -136,13 +129,7 @@ public class OfflineDsAssignmentStrategy extends AbstractDsAssignmentStrategy {
     }
 
     @Override
-    void sendDeploymentEvents(final DistributionSetAssignmentResult assignmentResult) {
-        // no need to send deployment events in the offline case
-    }
-
-    @Override
     void sendDeploymentEvents(final List<DistributionSetAssignmentResult> assignmentResults) {
         // no need to send deployment events in the offline case
     }
-
 }
