@@ -10,8 +10,10 @@
 package org.eclipse.hawkbit.repository.test.util;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.eclipse.hawkbit.im.authentication.SpPermission.SpringEvalExpressions.CONTROLLER_ROLE;
-import static org.eclipse.hawkbit.im.authentication.SpPermission.SpringEvalExpressions.SYSTEM_ROLE;
+import static org.eclipse.hawkbit.auth.SpPermission.READ_TENANT_CONFIGURATION;
+import static org.eclipse.hawkbit.auth.SpRole.CONTROLLER_ROLE;
+import static org.eclipse.hawkbit.auth.SpRole.SYSTEM_ROLE;
+import static org.eclipse.hawkbit.auth.SpRole.TENANT_ADMIN;
 
 import java.io.File;
 import java.io.IOException;
@@ -19,17 +21,23 @@ import java.net.URI;
 import java.nio.file.Files;
 import java.time.Duration;
 import java.time.ZonedDateTime;
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.Optional;
+import java.util.Random;
+
+import jakarta.validation.constraints.NotEmpty;
 
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.FileUtils;
 import org.awaitility.Awaitility;
 import org.awaitility.core.ConditionFactory;
-import org.eclipse.hawkbit.artifact.repository.ArtifactRepository;
-import org.eclipse.hawkbit.artifact.repository.ArtifactStoreException;
+import org.eclipse.hawkbit.artifact.ArtifactStorage;
+import org.eclipse.hawkbit.artifact.exception.ArtifactStoreException;
 import org.eclipse.hawkbit.repository.ArtifactManagement;
 import org.eclipse.hawkbit.repository.ConfirmationManagement;
 import org.eclipse.hawkbit.repository.ControllerManagement;
@@ -38,7 +46,6 @@ import org.eclipse.hawkbit.repository.DistributionSetInvalidationManagement;
 import org.eclipse.hawkbit.repository.DistributionSetManagement;
 import org.eclipse.hawkbit.repository.DistributionSetTagManagement;
 import org.eclipse.hawkbit.repository.DistributionSetTypeManagement;
-import org.eclipse.hawkbit.repository.EntityFactory;
 import org.eclipse.hawkbit.repository.QuotaManagement;
 import org.eclipse.hawkbit.repository.RepositoryConstants;
 import org.eclipse.hawkbit.repository.RolloutGroupManagement;
@@ -53,19 +60,25 @@ import org.eclipse.hawkbit.repository.TargetTagManagement;
 import org.eclipse.hawkbit.repository.TargetTypeManagement;
 import org.eclipse.hawkbit.repository.TenantConfigurationManagement;
 import org.eclipse.hawkbit.repository.exception.EntityNotFoundException;
+import org.eclipse.hawkbit.repository.helper.TenantConfigHelper;
 import org.eclipse.hawkbit.repository.model.Action;
+import org.eclipse.hawkbit.repository.model.Action.ActionStatusCreate;
 import org.eclipse.hawkbit.repository.model.Action.ActionType;
 import org.eclipse.hawkbit.repository.model.DeploymentRequest;
 import org.eclipse.hawkbit.repository.model.DistributionSet;
 import org.eclipse.hawkbit.repository.model.DistributionSetAssignmentResult;
+import org.eclipse.hawkbit.repository.model.DistributionSetTag;
 import org.eclipse.hawkbit.repository.model.DistributionSetType;
 import org.eclipse.hawkbit.repository.model.RepositoryModelConstants;
+import org.eclipse.hawkbit.repository.model.SoftwareModule;
 import org.eclipse.hawkbit.repository.model.SoftwareModuleType;
 import org.eclipse.hawkbit.repository.model.Target;
+import org.eclipse.hawkbit.repository.model.TargetFilterQuery;
+import org.eclipse.hawkbit.repository.model.TargetTag;
+import org.eclipse.hawkbit.repository.model.TargetType;
+import org.eclipse.hawkbit.repository.model.TargetUpdateStatus;
 import org.eclipse.hawkbit.repository.test.TestConfiguration;
 import org.eclipse.hawkbit.repository.test.matcher.EventVerifier;
-import org.eclipse.hawkbit.security.SystemSecurityContext;
-import org.eclipse.hawkbit.tenancy.TenantAware;
 import org.eclipse.hawkbit.tenancy.configuration.TenantConfigurationProperties.TenantConfigurationKey;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
@@ -74,8 +87,8 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.cloud.bus.ServiceMatcher;
 import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.context.annotation.Import;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
@@ -90,11 +103,10 @@ import org.springframework.test.context.TestPropertySource;
 
 @Slf4j
 @ActiveProfiles({ "test" })
-@ExtendWith({ JUnitTestLoggerExtension.class, SharedSqlTestDatabaseExtension.class })
-@WithUser(principal = "bumlux", allSpPermissions = true, authorities = { CONTROLLER_ROLE, SYSTEM_ROLE })
+@ExtendWith({ TestLoggerExtension.class, SharedSqlTestDatabaseExtension.class })
+@WithUser(principal = "bumlux", authorities = { TENANT_ADMIN, CONTROLLER_ROLE, SYSTEM_ROLE })
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.NONE)
 @ContextConfiguration(classes = { TestConfiguration.class })
-//@Import(TestChannelBinderConfiguration.class)
 // destroy the context after each test class because otherwise we get problem when context is
 // refreshed we e.g. get two instances of CacheManager which leads to very strange test failures.
 @DirtiesContext(classMode = ClassMode.AFTER_CLASS)
@@ -104,43 +116,43 @@ import org.springframework.test.context.TestPropertySource;
         listeners = { EventVerifier.class, CleanupTestExecutionListener.class },
         mergeMode = MergeMode.MERGE_WITH_DEFAULTS)
 @TestPropertySource(properties = "spring.main.allow-bean-definition-overriding=true")
+@Import(TestdataFactory.class)
 @SuppressWarnings("java:S6813") // constructor injects are not possible for test classes
 public abstract class AbstractIntegrationTest {
 
     protected static final Pageable PAGE = PageRequest.of(0, 500, Sort.by(Direction.ASC, "id"));
+    protected static final Pageable UNPAGED = Pageable.unpaged();
+
     protected static final URI LOCALHOST = URI.create("http://127.0.0.1");
-    protected static final int DEFAULT_TEST_WEIGHT = 500;
+    protected static final Random RND = TestdataFactory.RND;
 
     /**
-     * Number of {@link DistributionSetType}s that exist in every test case. One
-     * generated by using
+     * Number of {@link DistributionSetType}s that exist in every test case. One generated by using
      * {@link TestdataFactory#findOrCreateDefaultTestDsType()} and three
      * {@link SystemManagement#getTenantMetadata()};
      */
     protected static final int DEFAULT_DS_TYPES = RepositoryConstants.DEFAULT_DS_TYPES_IN_TENANT + 1;
 
     @Autowired
-    protected EntityFactory entityFactory;
+    protected SoftwareModuleManagement<? extends SoftwareModule> softwareModuleManagement;
     @Autowired
-    protected SoftwareModuleManagement softwareModuleManagement;
+    protected SoftwareModuleTypeManagement<? extends SoftwareModuleType> softwareModuleTypeManagement;
     @Autowired
-    protected SoftwareModuleTypeManagement softwareModuleTypeManagement;
+    protected DistributionSetManagement<? extends DistributionSet> distributionSetManagement;
     @Autowired
-    protected DistributionSetManagement distributionSetManagement;
+    protected DistributionSetTagManagement<? extends DistributionSetTag> distributionSetTagManagement;
     @Autowired
-    protected DistributionSetTypeManagement distributionSetTypeManagement;
+    protected DistributionSetTypeManagement<? extends DistributionSetType> distributionSetTypeManagement;
     @Autowired
     protected ControllerManagement controllerManagement;
     @Autowired
-    protected TargetManagement targetManagement;
+    protected TargetManagement<? extends Target> targetManagement;
     @Autowired
-    protected TargetTypeManagement targetTypeManagement;
+    protected TargetTypeManagement<? extends TargetType> targetTypeManagement;
     @Autowired
-    protected TargetFilterQueryManagement targetFilterQueryManagement;
+    protected TargetFilterQueryManagement<? extends TargetFilterQuery> targetFilterQueryManagement;
     @Autowired
-    protected TargetTagManagement targetTagManagement;
-    @Autowired
-    protected DistributionSetTagManagement distributionSetTagManagement;
+    protected TargetTagManagement<? extends TargetTag> targetTagManagement;
     @Autowired
     protected DeploymentManagement deploymentManagement;
     @Autowired
@@ -150,11 +162,7 @@ public abstract class AbstractIntegrationTest {
     @Autowired
     protected ArtifactManagement artifactManagement;
     @Autowired
-    protected TenantAware tenantAware;
-    @Autowired
     protected SystemManagement systemManagement;
-    @Autowired
-    protected TenantConfigurationManagement tenantConfigurationManagement;
     @Autowired
     protected RolloutManagement rolloutManagement;
     @Autowired
@@ -162,9 +170,7 @@ public abstract class AbstractIntegrationTest {
     @Autowired
     protected RolloutGroupManagement rolloutGroupManagement;
     @Autowired
-    protected SystemSecurityContext systemSecurityContext;
-    @Autowired
-    protected ArtifactRepository binaryArtifactRepository;
+    protected ArtifactStorage artifactStorage;
     @Autowired
     protected QuotaManagement quotaManagement;
 
@@ -177,14 +183,12 @@ public abstract class AbstractIntegrationTest {
     @Autowired
     protected TestdataFactory testdataFactory;
     @Autowired
-    protected ServiceMatcher serviceMatcher;
-    @Autowired
     protected ApplicationEventPublisher eventPublisher;
     private static final String ARTIFACT_DIRECTORY = createTempDir().getAbsolutePath() + "/" + randomString(20);
 
     @BeforeAll
     public static void beforeClass() {
-        System.setProperty("org.eclipse.hawkbit.repository.file.path", ARTIFACT_DIRECTORY);
+        System.setProperty("org.eclipse.hawkbit.artifact.fs.path", ARTIFACT_DIRECTORY);
     }
 
     @AfterAll
@@ -203,21 +207,21 @@ public abstract class AbstractIntegrationTest {
         final String description = "Updated description.";
 
         osType = SecurityContextSwitch
-                .runAsPrivileged(() -> testdataFactory.findOrCreateSoftwareModuleType(TestdataFactory.SM_TYPE_OS));
-        osType = SecurityContextSwitch.runAsPrivileged(() -> softwareModuleTypeManagement
-                .update(entityFactory.softwareModuleType().update(osType.getId()).description(description)));
+                .asPrivileged(() -> testdataFactory.findOrCreateSoftwareModuleType(TestdataFactory.SM_TYPE_OS));
+        osType = SecurityContextSwitch.asPrivileged(() -> softwareModuleTypeManagement
+                .update(SoftwareModuleTypeManagement.Update.builder().id(osType.getId()).description(description).build()));
 
-        appType = SecurityContextSwitch.runAsPrivileged(
+        appType = SecurityContextSwitch.asPrivileged(
                 () -> testdataFactory.findOrCreateSoftwareModuleType(TestdataFactory.SM_TYPE_APP, Integer.MAX_VALUE));
-        appType = SecurityContextSwitch.runAsPrivileged(() -> softwareModuleTypeManagement
-                .update(entityFactory.softwareModuleType().update(appType.getId()).description(description)));
+        appType = SecurityContextSwitch.asPrivileged(() -> softwareModuleTypeManagement
+                .update(SoftwareModuleTypeManagement.Update.builder().id(appType.getId()).description(description).build()));
 
         runtimeType = SecurityContextSwitch
-                .runAsPrivileged(() -> testdataFactory.findOrCreateSoftwareModuleType(TestdataFactory.SM_TYPE_RT));
-        runtimeType = SecurityContextSwitch.runAsPrivileged(() -> softwareModuleTypeManagement
-                .update(entityFactory.softwareModuleType().update(runtimeType.getId()).description(description)));
+                .asPrivileged(() -> testdataFactory.findOrCreateSoftwareModuleType(TestdataFactory.SM_TYPE_RT));
+        runtimeType = SecurityContextSwitch.asPrivileged(() -> softwareModuleTypeManagement
+                .update(SoftwareModuleTypeManagement.Update.builder().id(runtimeType.getId()).description(description).build()));
 
-        standardDsType = SecurityContextSwitch.runAsPrivileged(() -> testdataFactory.findOrCreateDefaultTestDsType());
+        standardDsType = SecurityContextSwitch.asPrivileged(() -> testdataFactory.findOrCreateDefaultTestDsType());
 
         // publish the reset counter market event to reset the counters after
         // setup. The setup is transparent by the test and its @ExpectedEvent
@@ -226,7 +230,6 @@ public abstract class AbstractIntegrationTest {
         // ApplicationEventMultiCaster which the TestConfiguration is doing so
         // the order of the events keep the same.
         EventVerifier.publishResetMarkerEvent(eventPublisher);
-
     }
 
     @AfterEach
@@ -238,6 +241,10 @@ public abstract class AbstractIntegrationTest {
                 log.warn("Cannot cleanup file-directory", e);
             }
         }
+    }
+
+    protected static TenantConfigurationManagement tenantConfigurationManagement() {
+        return TenantConfigHelper.getTenantConfigurationManagement();
     }
 
     /**
@@ -267,19 +274,26 @@ public abstract class AbstractIntegrationTest {
     private static final Duration AT_LEAST = Duration.ofMillis(Integer.getInteger("hawkbit.it.rest.await.atLeastMs", 5));
     private static final Duration POLL_INTERVAL = Duration.ofMillis(Integer.getInteger("hawkbit.it.rest.await.pollIntervalMs", 10));
     private static final Duration TIMEOUT = Duration.ofMillis(Integer.getInteger("hawkbit.it.rest.await.timeoutMs", 200));
+
     // default wait condition factory
     protected ConditionFactory await() {
         return Awaitility.await().atLeast(AT_LEAST).pollInterval(POLL_INTERVAL).atMost(TIMEOUT);
     }
 
-    protected static Action getFirstAssignedAction(
-            final DistributionSetAssignmentResult distributionSetAssignmentResult) {
+    protected DistributionSetType defaultDsType() {
+        return systemManagement.getTenantMetadata().getDefaultDsType();
+    }
+
+    protected SoftwareModuleType getASmType() {
+        return defaultDsType().getMandatoryModuleTypes().stream().findAny().orElseThrow();
+    }
+
+    protected static Action getFirstAssignedAction(final DistributionSetAssignmentResult distributionSetAssignmentResult) {
         return distributionSetAssignmentResult.getAssignedEntity().stream().findFirst()
                 .orElseThrow(() -> new IllegalStateException("expected one assigned action, found none"));
     }
 
-    protected static Long getFirstAssignedActionId(
-            final DistributionSetAssignmentResult distributionSetAssignmentResult) {
+    protected static Long getFirstAssignedActionId(final DistributionSetAssignmentResult distributionSetAssignmentResult) {
         return getFirstAssignedAction(distributionSetAssignmentResult).getId();
     }
 
@@ -299,65 +313,60 @@ public abstract class AbstractIntegrationTest {
         return TestdataFactory.randomBytes(len);
     }
 
-    protected DistributionSetAssignmentResult assignDistributionSet(final long dsID, final String controllerId) {
-        return assignDistributionSet(dsID, controllerId, ActionType.FORCED);
+    protected DistributionSetAssignmentResult assignDistributionSet(final long dsId, final String controllerId) {
+        return assignDistributionSet(dsId, controllerId, ActionType.FORCED);
     }
 
-    protected DistributionSetAssignmentResult assignDistributionSet(final long dsID, final String controllerId,
-            final ActionType actionType) {
-        return assignDistributionSet(dsID, Collections.singletonList(controllerId), actionType);
-    }
-
-    protected DistributionSetAssignmentResult assignDistributionSet(final long dsID, final String controllerId,
-            final ActionType actionType, final long forcedTime) {
-        return assignDistributionSet(dsID, Collections.singletonList(controllerId), actionType, forcedTime);
-    }
-
-    protected DistributionSetAssignmentResult assignDistributionSet(final long dsID, final List<String> controllerIds,
-            final ActionType actionType) {
-        return assignDistributionSet(dsID, controllerIds, actionType, RepositoryModelConstants.NO_FORCE_TIME);
-    }
-
-    protected DistributionSetAssignmentResult assignDistributionSet(final long dsID, final List<String> controllerIds,
-            final ActionType actionType, final long forcedTime) {
-        return assignDistributionSet(dsID, controllerIds, actionType, forcedTime, null);
+    protected DistributionSetAssignmentResult assignDistributionSet(final long dsId, final String controllerId, final ActionType actionType) {
+        return assignDistributionSet(dsId, Collections.singletonList(controllerId), actionType);
     }
 
     protected DistributionSetAssignmentResult assignDistributionSet(
-            final long dsID, final List<String> controllerIds,
-            final ActionType actionType, final long forcedTime, final Integer weight) {
+            final long dsId, final String controllerId, final ActionType actionType, final long forcedTime) {
+        return assignDistributionSet(dsId, Collections.singletonList(controllerId), actionType, forcedTime);
+    }
+
+    protected DistributionSetAssignmentResult assignDistributionSet(
+            final long dsId, final List<String> controllerIds, final ActionType actionType) {
+        return assignDistributionSet(dsId, controllerIds, actionType, RepositoryModelConstants.NO_FORCE_TIME);
+    }
+
+    protected DistributionSetAssignmentResult assignDistributionSet(
+            final long dsId, final List<String> controllerIds, final ActionType actionType, final long forcedTime) {
+        return assignDistributionSet(dsId, controllerIds, actionType, forcedTime, null);
+    }
+
+    protected DistributionSetAssignmentResult assignDistributionSet(
+            final long dsId, final List<String> controllerIds, final ActionType actionType, final long forcedTime, final Integer weight) {
         final boolean confirmationFlowActive = isConfirmationFlowActive();
 
         final List<DeploymentRequest> deploymentRequests = controllerIds.stream()
-                .map(id -> DeploymentManagement.deploymentRequest(id, dsID).setActionType(actionType)
-                        .setForceTime(forcedTime).setWeight(weight).setConfirmationRequired(confirmationFlowActive)
+                .map(id -> DeploymentRequest.builder(id, dsId)
+                        .actionType(actionType).forceTime(forcedTime).weight(weight).confirmationRequired(confirmationFlowActive)
                         .build())
                 .toList();
-        final List<DistributionSetAssignmentResult> results = deploymentManagement.assignDistributionSets(deploymentRequests);
+        final List<DistributionSetAssignmentResult> results = deploymentManagement.assignDistributionSets(deploymentRequests, null);
         assertThat(results).hasSize(1);
         return results.get(0);
     }
 
     protected List<DistributionSetAssignmentResult> assignDistributionSets(final List<DeploymentRequest> requests) {
-        final List<DistributionSetAssignmentResult> distributionSetAssignmentResults = deploymentManagement.assignDistributionSets(requests);
+        final List<DistributionSetAssignmentResult> distributionSetAssignmentResults =
+                deploymentManagement.assignDistributionSets(requests, null);
         assertThat(distributionSetAssignmentResults).hasSize(requests.size());
         return distributionSetAssignmentResults;
     }
 
     protected DistributionSetAssignmentResult assignDistributionSet(final DistributionSet ds, final List<Target> targets) {
-        final List<String> targetIds = targets.stream().map(Target::getControllerId).toList();
-        return assignDistributionSet(ds.getId(), targetIds, ActionType.FORCED);
+        return assignDistributionSet(ds.getId(), targets.stream().map(Target::getControllerId).toList(), ActionType.FORCED);
     }
 
-    protected DistributionSetAssignmentResult assignDistributionSet(final Long dsId, final List<String> targetIds,
-            final int weight) {
-        return assignDistributionSet(dsId, targetIds, ActionType.FORCED, RepositoryModelConstants.NO_FORCE_TIME,
-                weight);
+    protected DistributionSetAssignmentResult assignDistributionSet(final Long dsId, final List<String> targetIds, final int weight) {
+        return assignDistributionSet(dsId, targetIds, ActionType.FORCED, RepositoryModelConstants.NO_FORCE_TIME, weight);
     }
 
     protected DistributionSetAssignmentResult makeAssignment(final DeploymentRequest request) {
-        final List<DistributionSetAssignmentResult> results = deploymentManagement
-                .assignDistributionSets(Collections.singletonList(request));
+        final List<DistributionSetAssignmentResult> results = deploymentManagement.assignDistributionSets(List.of(request), null);
         assertThat(results).hasSize(1);
         return results.get(0);
     }
@@ -386,38 +395,46 @@ public abstract class AbstractIntegrationTest {
             final String controllerId, final String maintenanceWindowSchedule, final String maintenanceWindowDuration,
             final String maintenanceWindowTimeZone) {
 
-        return makeAssignment(DeploymentManagement.deploymentRequest(controllerId, dsID)
-                .setMaintenance(maintenanceWindowSchedule, maintenanceWindowDuration, maintenanceWindowTimeZone)
-                .setConfirmationRequired(true).build());
+        return makeAssignment(DeploymentRequest.builder(controllerId, dsID)
+                .maintenance(maintenanceWindowSchedule, maintenanceWindowDuration, maintenanceWindowTimeZone)
+                .confirmationRequired(true).build());
     }
 
     protected DistributionSetAssignmentResult assignDistributionSet(final DistributionSet pset, final Target target) {
         return assignDistributionSet(pset, Collections.singletonList(target));
     }
 
-    protected DistributionSetAssignmentResult assignDistributionSet(final long dsId, final String targetId,
-            final int weight) {
+    protected DistributionSetAssignmentResult assignDistributionSet(final long dsId, final String targetId, final int weight) {
         return assignDistributionSet(dsId, Collections.singletonList(targetId), weight);
     }
 
-    protected void enableMultiAssignments() {
-        tenantConfigurationManagement.addOrUpdateConfiguration(TenantConfigurationKey.MULTI_ASSIGNMENTS_ENABLED, true);
-    }
-
     protected void enableConfirmationFlow() {
-        tenantConfigurationManagement.addOrUpdateConfiguration(TenantConfigurationKey.USER_CONFIRMATION_ENABLED, true);
+        tenantConfigurationManagement().addOrUpdateConfiguration(TenantConfigurationKey.USER_CONFIRMATION_FLOW_ENABLED, true);
     }
 
     protected void disableConfirmationFlow() {
-        tenantConfigurationManagement.addOrUpdateConfiguration(TenantConfigurationKey.USER_CONFIRMATION_ENABLED, false);
+        tenantConfigurationManagement().addOrUpdateConfiguration(TenantConfigurationKey.USER_CONFIRMATION_FLOW_ENABLED, false);
     }
 
     protected boolean isConfirmationFlowActive() {
-        return tenantConfigurationManagement.getConfigurationValue(TenantConfigurationKey.USER_CONFIRMATION_ENABLED, Boolean.class).getValue();
+        return SecurityContextSwitch.getAs(
+                SecurityContextSwitch.withUser("as_system", READ_TENANT_CONFIGURATION),
+                () -> tenantConfigurationManagement()
+                        .getConfigurationValue(TenantConfigurationKey.USER_CONFIRMATION_FLOW_ENABLED, Boolean.class)
+                        .getValue());
     }
 
     protected Long getOsModule(final DistributionSet ds) {
-        return ds.findFirstModuleByType(osType).orElseThrow(NoSuchElementException::new).getId();
+        return findFirstModuleByType(ds, osType).orElseThrow(NoSuchElementException::new).getId();
+    }
+
+    protected Optional<SoftwareModule> findFirstModuleByType(final DistributionSet ds, final SoftwareModuleType type) {
+        return ds.getModules().stream().filter(module -> module.getType().equals(type)).findAny();
+    }
+
+    protected Optional<? extends SoftwareModule> findFirstModuleByType(final DistributionSetManagement.Create dsCreate,
+            final SoftwareModuleType type) {
+        return dsCreate.getModules().stream().filter(module -> module.getType().equals(type)).findAny();
     }
 
     protected Action prepareFinishedUpdate() {
@@ -435,36 +452,40 @@ public abstract class AbstractIntegrationTest {
         }
 
         controllerManagement.addUpdateActionStatus(
-                entityFactory.actionStatus().create(savedAction.getId()).status(Action.Status.RUNNING));
+                ActionStatusCreate.builder().actionId(savedAction.getId()).status(Action.Status.RUNNING).build());
         controllerManagement.addUpdateActionStatus(
-                entityFactory.actionStatus().create(savedAction.getId()).status(Action.Status.FINISHED));
+                ActionStatusCreate.builder().actionId(savedAction.getId()).status(Action.Status.FINISHED).build());
 
         return controllerManagement.findActionWithDetails(savedAction.getId())
                 .orElseThrow(() -> new EntityNotFoundException(Action.class, savedAction.getId()));
     }
 
     protected void enableBatchAssignments() {
-        tenantConfigurationManagement.addOrUpdateConfiguration(TenantConfigurationKey.BATCH_ASSIGNMENTS_ENABLED, true);
+        tenantConfigurationManagement().addOrUpdateConfiguration(TenantConfigurationKey.BATCH_ASSIGNMENTS_ENABLED, true);
     }
 
     protected void disableBatchAssignments() {
-        tenantConfigurationManagement.addOrUpdateConfiguration(TenantConfigurationKey.BATCH_ASSIGNMENTS_ENABLED, false);
+        tenantConfigurationManagement().addOrUpdateConfiguration(TenantConfigurationKey.BATCH_ASSIGNMENTS_ENABLED, false);
     }
 
     protected boolean isConfirmationFlowEnabled() {
-        return tenantConfigurationManagement
-                .getConfigurationValue(TenantConfigurationKey.USER_CONFIRMATION_ENABLED, Boolean.class).getValue();
+        return tenantConfigurationManagement().getConfigurationValue(TenantConfigurationKey.USER_CONFIRMATION_FLOW_ENABLED, Boolean.class)
+                .getValue();
     }
 
     // ensure that next action will get current time millis AFTER got from the previous
     protected void waitNextMillis() {
         final long createTime = System.currentTimeMillis();
         while (System.currentTimeMillis() == createTime) {
-            try {
-                Thread.sleep(1);
-            } catch (final InterruptedException e) {
-                Thread.currentThread().interrupt();
-            }
+            waitMillis(1);
+        }
+    }
+
+    protected void waitMillis(final long millis) {
+        try {
+            Thread.sleep(millis);
+        } catch (final InterruptedException e) {
+            Thread.currentThread().interrupt();
         }
     }
 
@@ -491,5 +512,21 @@ public abstract class AbstractIntegrationTest {
         } catch (final IOException e) {
             throw new ArtifactStoreException("Cannot create temp file", e);
         }
+    }
+
+    protected List<? extends Target> findByUpdateStatus(final TargetUpdateStatus status, final Pageable pageable) {
+        return targetManagement.findAll(pageable).stream().filter(target -> status.equals(target.getUpdateStatus())).toList();
+    }
+
+    protected TargetType findTargetTypeByName(@NotEmpty String name) {
+        return targetTypeManagement.findByRsql("name==" + name, UNPAGED).stream().findAny()
+                .orElseThrow(() -> new EntityNotFoundException(TargetType.class, name));
+    }
+
+    @SafeVarargs
+    protected static <T> Collection<T> concat(final Collection<T>... targets) {
+        final List<T> result = new ArrayList<>();
+        List.of(targets).forEach(result::addAll);
+        return result;
     }
 }
